--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,6 +12,16 @@
     {{ partial "head/meta_json_ld" . }}
     {{ partial "head/services" . }}
     {{ partial "head/custom-head" . }}
+    
+    <link rel="preload" href="/js/index.js"  as="script"/>
+    <script type="module" src="/js/index.js"></script>
+
+<canvas id="canvas"
+        width="100"
+        height="100"
+        style="margin: 0px ;position:fixed; image-rendering: pixelated; image-rendering: crisp-edges;width: 100%"
+></canvas>
+
 </head>
 
 <body id="root" class="theme__{{ index .Site.Params.themeOptions 0 }}">
