--- a/assets/sass/layout/_body.scss
+++ b/assets/sass/layout/_body.scss
@@ -3,12 +3,12 @@
   
   @include flexbox();
   
-  @include themify($themes) {
-      color: themed('body-color');
-      background-color: themed('backdrop-background-color');
-      hr {
-        border-color: themed('hr-color');
-      }
+ // @include themify($themes) {
+ //     color: themed('body-color');
+ //     background-color: themed('backdrop-background-color');
+ //     hr {
+ //       border-color: themed('hr-color');
+ //    }
   }
 }
 
