Add cloudflare web analyze

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{ block "title" . }}{{ .Title }} – {{ .Site.Title }}{{ end }}</title>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "8ac583f2e3b046269b0aa50d1ad9c3e7"}'></script><!-- End Cloudflare Web Analytics -->
     {{ partial "head/scripts" . }}    
     {{ partial "head/styles" . }}
     {{ partial "head/meta" . }}
