--- a/layouts/partials/service/google-adsense.html
+++ b/layouts/partials/service/google-adsense.html
@@ -1,4 +1,4 @@
-{{ if and (not .Site.IsServer) (not ($.Param "disableAdsense")) }}
+{{ if and (not hugo.IsServer) (not ($.Param "disableAdsense")) }}
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <ins
     class="adsbygoogle"
