--- a/layouts/partials/service/google-tag-manager.html
+++ b/layouts/partials/service/google-tag-manager.html
@@ -1,10 +1,10 @@
-{{ if and ($.Site.Params.googleTagManager) (not .Site.IsServer) }}
+{{ if and ($.Site.Params.googleTagManager) (not hugo.IsServer) }}
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ $.Site.Params.googleTagManager }}" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 {{ end }}
 
-{{ if and ($.Site.Params.googleTagManager) (not .Site.IsServer) }}
+{{ if and ($.Site.Params.googleTagManager) (not hugo.IsServer) }}
   <!-- Google Tag Manager -->
   <!-- create dataLayer -->
   <script>
